@@ -5,6 +5,7 @@ version 1.38:
 	- pommed: add support for the Early 2011 MacBook Pro:
 	MacBookPro8,1 (13"), MacBookPro8,2 (15"), MacBookPro8,3 (17").
 	- pommed: add acpi_video0 as a possible sysfs backlight driver.
+	- pommed: allow disabling audio support entirely.
 
 version 1.37:
 	- pommed: fix oversight in applesmc probing change.
